--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"noImplicitAny": false,
 		"esModuleInterop": true,
     "module": "commonjs",
-    "target": "es6",
+		"target": "es6",
+		"types": ["cypress", "node"],
     "lib": [
       "es2015",
       "es2017",
